--- a/README
+++ b/README
@@ -1,65 +1,46 @@
-# Kubernetes Project
+## Kubernetes Project
 
 Step 1: Create Ubuntu EC2 & Install the Jenkins Server
-AMI ID: Ubuntu 24.04
+AMI ID: Ubuntu 24.04 (ami-0f58b397bc5c1f2e8)
 Instance Spec: t2.medium
 Ingress_rule: Allowed all TCP ports
 
-# Update all software packages on Ubuntu server
+## Update all software packages on Ubuntu server
 $ sudo su - root     // Switch user to root
 $ apt-get update    // Downloads the index files
 $ apt-get upgrade  // Upgrade downloads the latest versions packages of the installed packages.
 
-# Install Java on Ubuntu server:
+## Install Java on Ubuntu server:
 $ sudo apt-get install default-jdk 
 $ java -version
 
-# Jenkins Installation
-
+## Jenkins Installation
 Install Jenkins on Ubuntu server using given Link below,
-
-https://www.jenkins.io/doc/book/installing/linux/#debianubuntu 
-
-Access Jenkins Url with Public ip on port 8080
-
-cat /var/lib/jenkins/secrets/initialAdminPassword 
+$ https://www.jenkins.io/doc/book/installing/linux/#debianubuntu 
+# Access Jenkins Url with Public ip on port 8080
+$ sudo cat /var/lib/jenkins/secrets/initialAdminPassword 
 
 Install the Suggested Plugins 
-
 Setup UserName and Password
 
-# Step 2: Get to know about Python Code and Create GitHub Repo
+## Step 2: Get to know about Python Code and Create GitHub Repo
+## Developer Actions:
 
-# Developer Actions:
-
-Create a Empty Github Repository 
-
-sudo su - root      // Switch to root user
-
-mkdir Code         // Create directory name called Code
-
-cd Code           // Navigate to the directory Code and create the files
-
-touch main.py pod.yaml requirements.txt Dockerfile aws.html
-
-# Push to files to Github
-
-git init 
-
-git add . 
-
-git commit -m "First commit" 
-
-git remote add origin https://github.com/thangacodes/k8s_cicd_project.git 
-
-git push origin master 
-
+## Create a Empty Github Repository 
+$ sudo su - root      // Switch to root user
+$ mkdir Code         // Create directory name called Code
+$ cd Code           // Navigate to the directory Code and create the files
+$ touch main.py pod.yaml requirements.txt Dockerfile aws.html
+## Push to files to Github
+$ git init 
+$ git add . 
+$ git commit -m "First commit" 
+$ git remote add origin https://github.com/thangacodes/k8s_cicd_project.git 
+$ git push origin master 
 Generate a access Classic token from the GitHub Repo Settings
 
-# Step 3: Create a Jenkins Pipeline Job And clone the Repo
-
-Create a Pipeline Job
-
+## Step 3: Create a Jenkins Pipeline Job And clone the Repo
+Create a Pipeline Job >> Job Name called "cicd"
 Install Stageview plugin from manageJenkins -> Plugins -> Available plugins
 
 pipeline { 
@@ -71,29 +52,19 @@ pipeline {
     } 
 }
 
-# Step 4: Containerize the Python app and publish to DockerHub
-
+## Step 4: Containerize the Python app and publish to DockerHub
 Docker Installation
-
-sudo apt install docker.io 
-
+$ sudo apt install docker.io 
 Open DockerHub account 
-
-https://login.docker.com/u/login/identifier?state=hKFo2SB5X2p6aURDSFAya2xoS3hWeDZGQU9QTFVfVEtwSF94dqFur3VuaXZlcnNhbC1sb2dpbqN0aWTZIEdzS09sUkJ0NVd5ZTRFUUhpVGxnUXRPdGZFcnpsanpOo2NpZNkgbHZlOUdHbDhKdFNVcm5lUTFFVnVDMGxiakhkaTluYjk 
-
-docker login
-
+$ https://login.docker.com/u/login/identifier?state=hKFo2SB5X2p6aURDSFAya2xoS3hWeDZGQU9QTFVfVEtwSF94dqFur3VuaXZlcnNhbC1sb2dpbqN0aWTZIEdzS09sUkJ0NVd5ZTRFUUhpVGxnUXRPdGZFcnpsanpOo2NpZNkgbHZlOUdHbDhKdFNVcm5lUTFFVnVDMGxiakhkaTluYjk 
+$ docker login
 Give Jenkins Permission to run sudo commands
+$ vi /etc/sudoers 
+$ jenkins ALL=(ALL) NOPASSWD: ALL 
+$ exit 
+$ sudo su - root           //Switch user to root
 
-vi /etc/sudoers 
-
-jenkins ALL=(ALL) NOPASSWD: ALL 
-
-exit 
-
-sudo su - root           //Switch user to root
-
-Run the three stages in Jenkinsfile
+# Run the three stages in Jenkinsfile
 
 pipeline { agent any
 
@@ -121,10 +92,8 @@ stages {
 
 # Step 5: Create Kubernetes Cluster
 
-Install Kops
-
-curl -Lo kops https://github.com/kubernetes/kops/releases/download/$(curl -s https://api.github.com/repos/kubernetes/kops/releases/latest | grep tag_name | cut -d '"' -f 4)/kops-linux-amd64
-
+# Install Kops
+$ curl -Lo kops https://github.com/kubernetes/kops/releases/download/$(curl -s https://api.github.com/repos/kubernetes/kops/releases/latest | grep tag_name | cut -d '"' -f 4)/kops-linux-amd64
 $ chmod +x kops
 $ sudo mv kops /usr/local/bin/kops
 
@@ -135,18 +104,14 @@ $ sudo mv ./kubectl /usr/local/bin/kubectl
 
 # AWS CLI Installation
 
-curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" 
-
-sudo apt install unzip 
-
-unzip awscliv2.zip 
-
-sudo ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli --update 
+$ curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" 
+$ sudo apt install unzip 
+$ unzip awscliv2.zip 
+$ sudo ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli --update 
 
 Create IAM user with Admin access policy and generate IAM access & Secret Key aws configure aws s3 ls
-
 # Generate Keys
-ssh-keygen
+$ ssh-keygen
 
 # Set Env Variables for Kops
 export AWS_ACCESS_KEY_ID= ""
